Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello-world-deployment
  labels:
    app: python-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-hello-world
  template:
    metadata:
      labels:
        app: python-hello-world
    spec:
      containers:
      - name: python-hello-world
        image: spacegeekops/flask-hello-world:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          fsGroup: 2000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      restartPolicy: Always
