Kubernetes/kubernetes-all-resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-hello-world-deployment
  labels:
    app: python-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-hello-world
  template:
    metadata:
      labels:
        app: python-hello-world
    spec:
      containers:
      - name: python-hello-world
        image: spacegeekops/python-hello-world:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          fsGroup: 2000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: python-hello-world-service
spec:
  selector:
    app: python-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-hello-world-ingress
spec:
  rules:
  - host: helloworld.exemple.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-hello-world-service
            port:
              number: 80
